# governdevs

./: .dockerignore  .env.example  .gitattributes  .gitignore  Caddyfile  Dockerfile  README.md  cbm.py  compose.yaml  docker-entrypoint.sh  main.py  mcp_server.py  pyproject.toml  repos_db.py  wiki.py
app/: cola.py  config.py  credenciales.py  cripto.py  db.py  git_repo.py  github_api.py  graph_engine.py  importador.py  main.py  mcp_server.py  pg.py  reglas.py  verificacion.py  webhook.py
migrations/: schema.sql
scripts/: preparar_wiki.py
static/: index.html
static/css/: styles.css
static/js/: actividad.js  api.js  audit.js  credenciales.js  fuentes.js  importar.js  main.js  markdown.js  modal.js  reglas.js  repos.js  resumen.js  tabs.js  toast.js
tests/: conftest.py  test_capacidades.py  test_cola.py  test_git_repo.py  test_github_api.py  test_importador.py  test_reglas_slug.py  test_reglas_snippet.py  test_verificacion.py  test_webhook.py
