[project]
name = "context-hub"
version = "0.1.0"
description = "AI Context Hub — grafo de código (codebase-memory-mcp) + lineamientos oficiales de arquitectura, servidos a agentes IA vía REST y MCP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic==0.116.0",
    "fastapi==0.139.0",
    "fastmcp==3.4.4",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "uvicorn[standard]==0.51.0",
    "psycopg[binary]>=3.2,<4",
    "psycopg-pool>=3.2,<4",
    "cryptography>=43,<47",
    "httpx>=0.27,<1",
]

[dependency-groups]
dev = ["pytest>=8,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# La app se importa como paquete `app` desde la raíz del proyecto.
pythonpath = ["."]
